# YaGE

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Doxyfile.in  LICENSE  Makefile  README-zh.md  README.md  appveyor.yml
doc/: CMakeLists.txt  Doxyfile-dev.in  Doxyfile-user.in  Doxylayout-user.xml  build-vc6-zh.md
doc/chinese/: canvas.doc  colors.doc  coordinate.doc  first-program.doc  install.doc  interactive.doc  mainpage.doc  shape.doc  tutorial.doc
include/: app.hpp  graphics.h  yage.h
include/yage/: common.h  msvc.h
pkg/: Makefile  utils.nsh  yage.nsi
pkg/AppVeyor/: avbuilder.cmd  avconfig.cmd  avcygwin.sh  avmingw.sh  avupload.sh
pkg/NSIS/: utils.nsh  yage.nsi
pkg/NSIS/plugin/: Makefile  path.c  pluginapi.c
pkg/Travis/aur/: aur.py  aur.sh  aurssh  deploy.key
pkg/Travis/ppa/: ppa.asc  ppa.py  ppa.sh
pkg/Travis/ppa/debian/: changelog  control  copyright
pkg/Travis/rpm/: rpm.py  rpm.sh
src/: .ycm_extra_conf.py  CMakeLists.txt  bgi.cc  main.cc  main.h  test.cc  test.cpp  test_audio.cc  version.cc  yage.cc  yage.h
src/api/: bgi.cc  yage.cc  yage.h  yage_button.cc  yage_button.h  yage_internal.h
src/audio/: mswin.cc  mswin.h  mswin_wmp_mingw.h  osx.h  osx.mm  player.cc  player.h  unix.cc  unix.h
src/core/: app.cc  app.h  message.cc  message.h  window.cc  window.h
src/dialog/: color_chooser_dlg.cc  color_chooser_dlg.h  file_chooser_dlg.cc  file_chooser_dlg.h  font_chooser_dlg.cc  font_chooser_dlg.h  input_dlg.cc  input_dlg.h  message_dlg.cc  message_dlg.h
src/draw/: animation.cc  animation.h  base_ellipse.cc  base_ellipse.h  base_elliptic_arc.cc  base_elliptic_arc.h  base_poly.cc  base_poly.h  basic_shape.cc  basic_shape.h  canvas.cc  canvas.h  circle.cc  circle.h  color.cc  color.h  ellipse.cc  ellipse.h  elliptic_arc.cc  elliptic_arc.h  elliptic_sector.cc  elliptic_sector.h  font.cc  font.h  line.cc  line.h  linear_gradient_color.cc  linear_gradient_color.h  paint.cc  paint.h  point.cc  point.h  poly.cc  poly.h  rect.cc  rect.h  shape.h  shape_property.cc  shape_property.h  text.cc  (+1 more)
src/platform/: player.cc  player.h  unix.cc  unix.h  win32.cc  win32.h
src/platform/player/: linux.cc  linux.h  macosx.h  macosx.mm  win32.cc  win32.h  wmp_mingw.h
src/res/: CMakeLists.txt  Readme.md  binary-array-generator.c  icon_yage_add.h  icon_yage_cancel.h  icon_yage_close.h  icon_yage_copy.h  icon_yage_cut.h  icon_yage_delete.h  icon_yage_edit.h  icon_yage_edit_clear.h  icon_yage_error.h  icon_yage_file.h  icon_yage_folder.h  icon_yage_information.h  icon_yage_ok.h  icon_yage_open.h  icon_yage_paste.h  icon_yage_question.h  icon_yage_remove.h  icon_yage_save.h  icon_yage_search.h  icon_yage_select_all.h  icon_yage_warning.h  resources.rc  yage-theme.css  yage_theme.cc  yage_theme.h  yage_theme_css.h
src/res/yage-extent-icon-pack/: Readme.txt
src/res/yage-extent-icon-pack/YaGE/: index.theme
src/test/: api_bgi.cc  api_yage.cc  api_yage_canvas_cut.cc  api_yage_perf.cc  api_yage_test_c_compiler.c  audio.cc  dialog.cc  draw.cc  draw_anim.cc  draw_perf.cc  draw_pic.cc  draw_shape.cc  fix_size.cc  msg.cc  resize.cc  test.cc  test.h  timer.cc  window_count.cc  window_fix_size.cc  window_msg.cc  window_resize.cc
src/util/: color.h  encoding.cc  encoding.h  mswin.cc  mswin.h  runner.cc  runner.h  snprintf.c  snprintf.h  stdint.h  time.h  vsscanf.cc
src/window/: message.cc  message.h  timer.cc  timer.h  window.cc  window.h
